# omics_tools

./: .gitignore  LICENSE.txt  README.md  noxfile.py  pylock.txt  pyproject.toml
notebooks/: differential_expression.ipynb  multivariate_supervised.ipynb  multivariate_unsupervised.ipynb
src/omics_tools/: association.py  enrichment.py  evaluation.py  multivariate.py  preprocessing.py  tissue_specificity.py
tests/: test_association.py  test_enrichment.py  test_evaluation.py  test_multivariate.py  test_preprocessing.py  test_tissue_specificity.py
